--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -14,10 +14,12 @@ set(QUINTE_SRC
     Core/StringBase.hpp
     Core/StringSlice.hpp
     Core/Unicode.hpp
-	Core/${QUINTE_PLATFORM_NAME}/Utils.hpp
+    Core/${QUINTE_PLATFORM_NAME}/Utils.hpp
 
     UI/Alerts.hpp
     UI/${QUINTE_PLATFORM_NAME}/Alerts.cpp
+    UI/Utils.hpp
+    UI/Utils.cpp
 
     main.cpp
 )
@@ -26,3 +28,19 @@ set(QUINTE_SRC
 add_executable(quinte ${QUINTE_SRC})
 target_link_libraries(quinte imgui)
 target_include_directories(quinte PRIVATE "${QUINTE_PROJECT_ROOT}/code")
+
+
+file(GLOB_RECURSE
+    QUINTE_RESOURCE_FILES
+    RELATIVE ${QUINTE_PROJECT_ROOT}/ThirdParty/fonts
+    CONFIGURE_DEPENDS
+    ${QUINTE_PROJECT_ROOT}/ThirdParty/fonts/**.ttf
+)
+
+foreach(RESOURCE_FILE ${QUINTE_RESOURCE_FILES})
+    configure_file(
+        "${QUINTE_PROJECT_ROOT}/ThirdParty/fonts/${RESOURCE_FILE}"
+        "${QUINTE_RESOURCE_DIR}/fonts/${RESOURCE_FILE}"
+        COPYONLY
+    )
+endforeach()
