Work on the audio system - Minor memory management API changes; - Reference counting system; - Unit tests; - Audio buffers.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,2 +1,9 @@
-[*{.cpp,.hpp}]
-encoding=utf-8-bom
+root = true
+
+[*]
+charset = utf-8-bom
+insert_final_newline = true
+
+[CMakeLists.txt]
+indent_style = space
+indent_size = 4
