--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.19)
+﻿cmake_minimum_required(VERSION 3.19)
 project(quinte VERSION 0.1.0
     LANGUAGES CXX C
 )
@@ -13,3 +13,4 @@ include(Config)
 include(deps)
 
 add_subdirectory(code)
+add_subdirectory(tests)
